--- a/ARM/AzureBastion/bastion.template.parameters.logicapp.json
+++ b/ARM/AzureBastion/bastion.template.parameters.logicapp.json
@@ -1,1 +1,26 @@
-
+{
+    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentParameters.json#",
+    "contentVersion": "1.0.0.0",
+    "parameters": {
+        "virtualNetworkName": {
+            "value": "@{parameters('AzureBastionVNet')}"
+        },
+        "bastionName": {
+            "value": "@{parameters('AzureBastionName')}"
+        },
+        "bastionSubnetAddressRange": {
+            "value": "@{parameters('AzureBastionSubnetAddressRange')}"
+        },
+        "bastionPublicIpName": {
+            "value": "@{parameters('AzureBastionIPName')}"
+        },
+        "bastionSubnetNetworkSecurityGroupName": {
+            "value": "@{parameters('AzureBastionNSG')}"
+        },
+        "onPremisesIPAddresses": {
+            "value": [
+                "0.0.0.0/0"
+            ]
+        }
+    }
+}
